[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://themes/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/rooms/ttt.gd" type="Script" id=3]
[ext_resource path="res://assets/rooms/ttt.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ttt/o1/1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/ttt/o1/2.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ttt/o1/3.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ttt/o1/4.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/ttt/o1/5.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/ttt_done.png" type="Texture" id=10]
[ext_resource path="res://assets/audio/pencil.ogg" type="AudioStream" id=12]
[ext_resource path="res://assets/ui/pronoun_input_box.png" type="Texture" id=13]
[ext_resource path="res://themes/ui_font_18.tres" type="DynamicFont" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ null, ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "o1",
"speed": 15.0
} ]

[node name="room_instance" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="state_handler" type="Control" parent="."]
theme = ExtResource( 2 )
script = ExtResource( 3 )
default_music = "_pass"

[node name="bg" type="Sprite" parent="state_handler"]
position = Vector2( 7.68423, -41.4402 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -7.68423, 41.1628 )

[node name="spaces" type="Control" parent="state_handler"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="0" type="ColorRect" parent="state_handler/spaces"]
margin_left = 376.0
margin_top = 77.0
margin_right = 542.0
margin_bottom = 240.0
color = Color( 0, 1, 0.835294, 0.266667 )

[node name="1" type="ColorRect" parent="state_handler/spaces"]
margin_left = 542.0
margin_top = 79.0
margin_right = 711.0
margin_bottom = 240.0
color = Color( 0.803922, 0, 1, 0.266667 )

[node name="2" type="ColorRect" parent="state_handler/spaces"]
margin_left = 711.0
margin_top = 81.0
margin_right = 878.0
margin_bottom = 240.0
color = Color( 0, 1, 0.203922, 0.266667 )

[node name="3" type="ColorRect" parent="state_handler/spaces"]
margin_left = 370.0
margin_top = 240.0
margin_right = 535.0
margin_bottom = 403.0
color = Color( 1, 0.423529, 0, 0.266667 )

[node name="4" type="ColorRect" parent="state_handler/spaces"]
margin_left = 535.0
margin_top = 240.0
margin_right = 707.0
margin_bottom = 404.0
color = Color( 0.85098, 1, 0, 0.266667 )

[node name="5" type="ColorRect" parent="state_handler/spaces"]
margin_left = 707.0
margin_top = 240.0
margin_right = 878.0
margin_bottom = 405.0
color = Color( 0, 0.109804, 1, 0.266667 )

[node name="6" type="ColorRect" parent="state_handler/spaces"]
margin_left = 363.0
margin_top = 402.143
margin_right = 529.0
margin_bottom = 565.143
color = Color( 0, 0.647059, 1, 0.266667 )

[node name="7" type="ColorRect" parent="state_handler/spaces"]
margin_left = 529.097
margin_top = 404.097
margin_right = 707.097
margin_bottom = 565.0
color = Color( 1, 0, 0, 0.266667 )

[node name="8" type="ColorRect" parent="state_handler/spaces"]
margin_left = 707.0
margin_top = 405.0
margin_right = 879.0
margin_bottom = 565.0
color = Color( 0.313726, 1, 0, 0.266667 )

[node name="shapes" type="Node2D" parent="state_handler"]

[node name="0" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 452.402, 152.873 )
frames = SubResource( 1 )
animation = "o1"

[node name="1" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 622.448, 155.594 )
frames = SubResource( 1 )
animation = "o1"

[node name="2" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 797.937, 156.954 )
frames = SubResource( 1 )
animation = "o1"

[node name="3" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 441.519, 318.839 )
frames = SubResource( 1 )
animation = "o1"

[node name="4" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 618.367, 318.839 )
frames = SubResource( 1 )
animation = "o1"

[node name="5" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 799.297, 317.478 )
frames = SubResource( 1 )
animation = "o1"

[node name="6" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 436.077, 486.165 )
frames = SubResource( 1 )
animation = "o1"

[node name="7" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 618.367, 488.886 )
frames = SubResource( 1 )
animation = "o1"

[node name="8" type="AnimatedSprite" parent="state_handler/shapes"]
position = Vector2( 799.297, 486.165 )
frames = SubResource( 1 )
animation = "o1"

[node name="loaded_drawing" type="TextureRect" parent="state_handler"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="draw_container" type="Control" parent="state_handler"]
margin_right = 40.0
margin_bottom = 40.0

[node name="done_button" type="Button" parent="state_handler"]
visible = false
anchor_right = 1.0
margin_left = 518.954
margin_top = 594.233
margin_right = 712.954
margin_bottom = 665.233
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Sprite" type="Sprite" parent="state_handler/done_button"]
position = Vector2( 0.554386, -29.7181 )
texture = ExtResource( 10 )
centered = false

[node name="Label" type="Label" parent="state_handler/done_button"]
margin_left = 6.0
margin_top = 19.0
margin_right = 190.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( -555.677, -604.755 )
text = "done"
align = 1

[node name="placeholder_input" type="TextEdit" parent="state_handler"]
visible = false
margin_left = 328.857
margin_top = 569.677
margin_right = 467.857
margin_bottom = 693.677

[node name="turn_delay" type="Timer" parent="state_handler"]
wait_time = 0.4
one_shot = true

[node name="asmr" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 12 )
volume_db = 10.0
bus = "SFX"

[node name="audio_delay" type="Timer" parent="state_handler"]
wait_time = 0.03
one_shot = true

[node name="skip_game" type="Button" parent="state_handler"]
margin_left = 32.0
margin_top = 652.0
margin_right = 183.0
margin_bottom = 699.0
rect_pivot_offset = Vector2( -315.752, -7.95071 )
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="menu_button0" type="Sprite" parent="state_handler/skip_game"]
position = Vector2( 75.5, 26 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="state_handler/skip_game"]
margin_left = 8.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 66.313, 64.7428 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = -6
custom_fonts/font = ExtResource( 14 )
text = "skip"
align = 1
valign = 1

[connection signal="animation_finished" from="state_handler/shapes/0" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/1" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/2" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/3" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/4" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/5" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/6" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/7" to="state_handler" method="end_olivers_turn"]
[connection signal="animation_finished" from="state_handler/shapes/8" to="state_handler" method="end_olivers_turn"]
[connection signal="pressed" from="state_handler/done_button" to="state_handler" method="end_players_turn"]
[connection signal="timeout" from="state_handler/turn_delay" to="state_handler" method="end_olivers_turn2"]
[connection signal="timeout" from="state_handler/audio_delay" to="state_handler" method="stop_audio"]
[connection signal="pressed" from="state_handler/skip_game" to="state_handler" method="end_game" binds= [ "stalemate" ]]
